sumo/tests/traci/Scenario/DomRoadMap/InvalidObjectID/scenario_roadmap_shapeinvalidroad.prog
simstep 1 1
% flag: get, domain: road map, domain id:-1, variable: shape, valType: 0 %
scenario_novalue 0 0 -1 9 0
simstep 2 1
